退会機能追加

--- a/WebContent/css/room.css
+++ b/WebContent/css/room.css
@@ -153,3 +153,7 @@ button {
     padding-top: 15px;
     padding-left: 137px;
 }
+.Unsubscribed{
+    margin-top: -52px;
+    padding-left: 50px;
+}
