--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -10,14 +10,13 @@ body {
     width: 100%;
     height: 60px;
     border-bottom: 1px solid #E3E3E3;
-    padding-bottom:10px;
+    padding-bottom:21px;
     position:relative;
 }
 
 #header_2 {
     width:840px;
     margin:0 auto;
-    padding-top:10px;
 }
 
 
@@ -104,21 +103,28 @@ button {
 
 .message-mark {
   float:right;
-  padding-top:10px;
+  padding-top:27px;
+  padding-right:50px;
+}
+
+.mypage-mark {
+  float:right;
+  padding-top:27px;
   padding-right:50px;
 }
 
 .title {
-    position:absolute;
-    right:700px;
-    top:-4px;
-    font-size:53px;
-    font-family: 'Sacramento', cursive;erif;
+    font-size: 53px;
+    font-family: 'Sacramento', cursive;
+    padding-right: -31px;
+    padding-left: 182px;
+    padding-bottom: -10px;
+}
 }
 
 .mypage-mark {
     float:right;
-    padding-top:10px;
+    padding-top:27px;
 }
 .user-data {
     padding: 20px;
@@ -151,9 +157,10 @@ button {
 .good-list{
     float:left;
     padding-left:24px;
-    padding-top:10px;
+    padding-top:27px;
 }
 .mark{
     float:left;
+    padding-top: 12px;
 }
 
